--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,5 +21,9 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+        stage('Complete){
+        {
+            echo 'Job Complete'
+        }
     }
 }
