--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,7 +22,9 @@ pipeline {
             }
         }
         stage('Complete'){
-            echo 'Job Complete'
+            steps{
+                sh 'echo Job Complete'
+            }
         }
     }
 }
